iptables_C7
# Generated by iptables-save v1.4.7 on Thu Nov 29 09:17:42 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 192.168.142.100/32 -p tcp -m tcp --sport 4949 --dport 4949 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --sport 3306 -j ACCEPT
-A INPUT -p udp -m udp --dport 520 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -d 192.168.142.100/32 -p tcp -m tcp --sport 4949 --dport 4949 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 520 -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -p tcp -m tcp --sport 3306 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Thu Nov 29 09:17:42 2018
